--- a/src/pages/SendGameToAdmin.css
+++ b/src/pages/SendGameToAdmin.css
@@ -310,4 +310,21 @@ progress::-moz-progress-bar {
     width: 80%;
     margin: 0 auto;
 }
+.update-log textarea{
+    border: none;
+  border-radius: 3px;
+  box-shadow: inset 1px 1px 0px #000a;
+  outline: none;
+  background-color: #1A1C1F;
+  resize: vertical;
+  width: 100%;
+  margin: 0 auto;
+  color: white;
+}
+.update-log{
+  width: 80%;
+  margin: 0 auto;
+}
+
+
 
