--- a/src/pages/HomePage/BrowseByTag.css
+++ b/src/pages/HomePage/BrowseByTag.css
@@ -4,6 +4,7 @@
     font-weight: normal;
     font-family: "Motiva Sans", Sans-serif;
     transition: padding 0.25s;
+    cursor: pointer;
 }
 
 .browse-tags .title {
