--- a/src/components/GameCard/GameCard.css
+++ b/src/components/GameCard/GameCard.css
@@ -4,7 +4,8 @@
   overflow: hidden;
   color: #c7d5e0;
   cursor: pointer;
-  height: 100%;
+  /* height: 100%; */
+  height: 65px;
 }
 
 .game-card:hover {
