--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -114,5 +114,20 @@
 .header-user-action-icon img {
   width: 100%;
 }
+.download-button {
+  color: #ffffff;
+  background-color: rgb(27, 158, 67);
+  text-decoration: none;
+  padding: 8px 12px;
+  font-size: 13px;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  transition: background 0.2s;
+}
+
+.download-button:hover {
+  background-color: #218c4c;
+}
 
 /* Thêm CSS cho các phần tử khác như language selector nếu có */
