--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,3 @@
-/* src/components/Header/Header.css */
-
 .header {
   background-color: #171a21;
   padding: 10px 20px;
@@ -25,18 +23,36 @@
 .header-nav .header-nav-item {
   color: #c7d5e0;
   text-decoration: none;
-  padding: 10px 15px;
+  padding: 10px 8px;
   text-transform: uppercase;
-  /* Chữ hoa giống Steam */
   font-size: 16px;
   font-weight: 500;
   transition: color 0.2s ease-in-out;
+  max-width: 130px;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  font-family: "Motiva Sans", "Twemoji", "Noto Sans", Helvetica, sans-serif;
+  position: relative;
 }
 
 .header-nav-item.active {
   color: #1a9fff;
-  text-decoration: underline;
 }
+
+.header-nav-item.active::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2.5px;
+  background: #1a9fff;
+  border-radius: 3px;
+  animation: slide 0.1s;
+  margin-top: 2px;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+}
+
 
 .header-nav a:hover {
   color: #ffffff;
@@ -44,6 +60,7 @@
 }
 
 .nav-user-dropdown-wrapper {
+  max-width: 130px;
   position: relative;
 }
 
@@ -81,18 +98,48 @@
 .header-user-action {
   display: flex;
   align-items: start;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 21px;
+  line-height: 21px;
+  max-width: 100%;
+}
+
+.header-user-action-content {
+  white-space: nowrap;
+  height: 100%;
+  line-height: 21px;
+  height: 21px;
+  font-size: 11px;
 }
 
 .user-action-content {
+  position: relative;
+  z-index: 100;
   display: flex;
   align-items: center;
-  width: 100%;
   text-align: center;
   justify-content: end;
+  gap: 5px;
+  height: 100%;
 }
 
+.header-download-btn {
+  padding: 2px 10px;
+  color: white;
+  background-color: rgba(103, 112, 123, 0.2);
+}
+
+.header-download-btn:hover {
+  background-color: #3D4450;
+  transition-property: background;
+  transition-duration: 250ms;
+  cursor: pointer;
+}
+
+
 .user-action-content a {
-  /* Nếu bạn dùng link cho login/register */
   color: #c7d5e0;
   text-decoration: none;
   padding: 8px 12px;
@@ -111,9 +158,15 @@
   padding-right: calc(0.5rem + 14px);
 }
 
+.header-user-action-icon {
+  width: 34px;
+}
+
+
 .header-user-action-icon img {
   width: 100%;
 }
+
 .download-btn {
   transition: all 0.2s ease;
   border-radius: 4px;
