--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -69,7 +69,7 @@
   flex-direction: column;
   background: white;
   position: absolute;
-  top: 100%;
+  top: calc(100% + 5px);
   left: 0;
   z-index: 11;
   background: #3d4450;
