Fix: Forgot Password

--- a/src/pages/ForgotPassword/ForgotPasswordRequest.css
+++ b/src/pages/ForgotPassword/ForgotPasswordRequest.css
@@ -1,19 +1,15 @@
-body {
-    font-family: "Inter", sans-serif;
-    background-color: #1e2227;
-    color: white;
-    min-height: 100vh;
-    padding: 2rem;
-  }
+
   
   .support-form {
-    max-width: 48rem;
+    margin: 0 auto;
+    width: 30%;
   }
   
   .form-title {
     font-size: 1.875rem;
     font-weight: 800;
     margin-bottom: 1.5rem;
+    color: white;
   }
   
   .form-container {
