--- a/src/pages/HomePage/BrowseByPublisher.css
+++ b/src/pages/HomePage/BrowseByPublisher.css
@@ -29,6 +29,7 @@
 
 .browse-publishers .capsule-cnt img {
     width: 100%;
+    height: 100%;
     display: block;
     filter: saturate(0.7);
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6);
