--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -142,3 +142,19 @@ Added by Phan NT Son
 .gradient-green-button:hover {
   opacity: 0.9;
 }
+
+.custom-spinner {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  border: 2px solid #f3f3f3;
+  border-top: 2px solid #555;
+  border-radius: 50%;
+  animation: spin 0.6s linear infinite;
+  vertical-align: middle;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
