--- a/src/pages/FamilyPage/FamilySettingTab.css
+++ b/src/pages/FamilyPage/FamilySettingTab.css
@@ -4,30 +4,103 @@
 
 }
 
-.family-setting-tab .setting-nav{
-    padding: 5px;   
+.family-setting-tab .setting-nav {
+    padding: 5px;
 }
 
-.family-setting-tab .setting-nav .nav-item{
+.family-setting-tab .setting-nav .nav-item {
     cursor: pointer;
     margin: 5px 10px;
     user-select: none;
     font-size: 16px;
 }
 
-.family-setting-tab .setting-nav .nav-item:hover{
+.family-setting-tab .setting-nav .nav-item:hover {
     filter: brightness(1.5);
 }
 
-.family-setting-tab .setting-content{
+.family-setting-tab .setting-content {
     padding: 5px;
     border-top: #acb2b8 1px solid;
 }
 
-.family-setting-tab .member-management-container{
+.family-setting-tab .member-management-container {
     width: 100%;
+    padding: 10px;
 }
-.family-setting-tab .member-management-container .form-group{
+
+.family-setting-tab .member-management-container .section {
+    padding: 10px 5px;
     width: 100%;
 }
 
+
+.family-setting-tab .member-management-container .form-group {
+    width: 100%;
+}
+
+.member-management-container .form-group .selected-members-list {
+    min-height: 35px;
+    max-height: 60px;
+    overflow-y: auto;
+}
+
+.member-management-container .selected-members-list .selected-member {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    margin: 4px;
+    border-radius: 4px;
+    background: #1f8dfe;
+    padding: 0 8px;
+    color: #dfe3e6;
+    cursor: pointer;
+
+}
+
+.member-management-container .selected-members-list .selected-member .selected-member-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 107px;
+}
+
+.member-management-container .form-group .member-list {
+    display: flex;
+    flex-direction: column;
+    padding: 0 10px;
+    gap: 5px;
+    max-height: 150px;
+    overflow-y: auto;
+}
+
+.member-management-container .form-group .member-list .member-item {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+}
+
+.member-management-container .form-group .member-list .member-item:hover .avatar {
+    filter: brightness(1.5);
+    transition: filter 0.3s ease-in;
+}
+
+.member-management-container .form-group .member-list .member-item .avatar {
+    width: 38px;
+    height: 38px;
+    transition: filter 0.3s ease-out;
+
+}
+
+.member-management-container .form-group .member-list .member-item .avatar img {
+    height: 100%;
+    width: 100%;
+}
+
+.member-management-container .form-group .member-list .member-item.selected {
+    background: #596168;
+
+}
