--- a/src/pages/FamilyPage/FamilyLibraryTab.css
+++ b/src/pages/FamilyPage/FamilyLibraryTab.css
@@ -40,6 +40,7 @@
 .family-library-tab .result {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .family-library-tab .result-not-found {
@@ -52,27 +53,38 @@
 }
 
 .family-library-tab .box-item {
-    display: flex;
-    justify-content: space-between;
-    flex: 1 100%;
+    width: 25%;
     margin-top: 4px;
     background: rgba(29, 31, 36, .8);
     padding: 8px;
     position: relative;
-    flex-wrap: wrap;
+    filter: brightness(0.7);
+    transition: filter 0.2s ease;
+    cursor: pointer;
+    user-select: none;
+}
+
+.family-library-tab .box-item:hover {
+    filter: brightness(1);
+
 }
 
 .family-library-tab .box-item .game-box {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: .5rem;
 }
 
 .family-library-tab .box-item .game-box .game-avatar {
-    width: 36px;
+    width: 100%;
+    height: 100px;
 }
 
 .family-library-tab .box-item .game-box .game-avatar img {
     width: 100%;
+    height: 100%;
 }
 
 .family-library-tab .box-item .game-box .game-name {
@@ -81,6 +93,10 @@
     cursor: pointer;
     font-weight: bold;
     font-size: 15px;
+    max-width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .family-library-tab .popup {
@@ -90,7 +106,6 @@
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s ease;
-    color: white;
 }
 
 .family-library-tab .popup.open {
@@ -102,12 +117,19 @@
     display: flex;
     flex-direction: row-reverse;
     color: white;
-    cursor: pointer;
     padding: 5px;
 }
 
-.family-library-tab .popup.open .actions span:hover {
+.family-library-tab .popup.open .actions .close-btn {
+    width: 25px;
+    height: 25px;
+    font-size: 16px;
+    user-select: none;
+}
+
+.family-library-tab .popup.open .actions .close-btn:hover {
     color: tomato;
+    cursor: pointer;
 }
 
 .family-library-tab .popup.open .left-col {
@@ -119,8 +141,15 @@
 
 .family-library-tab .popup.open .left-col .popup-item {
     cursor: pointer;
-
+    padding: 10px;
+    user-select: none;
 }
+
+.family-library-tab .popup.open .left-col .popup-item.active {
+    filter: brightness(1.5);
+    background: rgba(0, 0, 0, 0.2);
+}
+
 
 
 .family-library-tab .popup.open .right-col {
@@ -145,11 +174,13 @@
     display: flex;
     flex-direction: column;
     color: #969696;
+    padding: 10px 5px;
 }
 
 .popup-tab .form-group .selected-items {
-    padding: 10px 5px;
     min-height: 25px;
+    max-height: 60px;
+    overflow-y: auto;
 }
 
 
@@ -165,7 +196,11 @@
     cursor: pointer;
 }
 
-.popup-tab .form-group .available-items {}
+.popup-tab .form-group .available-items {
+    min-height: 200px;
+    max-height: 300px;
+    overflow-y: auto;
+}
 
 .popup-tab .form-group .available-items .game-item {
     display: flex;
