--- a/src/pages/FamilyPage/FamilyPage.css
+++ b/src/pages/FamilyPage/FamilyPage.css
@@ -24,6 +24,18 @@
     font-size: 24px;
 }
 
+.family-page-header .username .reload-icon {
+    display: inline-block;
+    /* cần thiết để transform hoạt động */
+    transition: transform 300ms;
+    cursor: pointer;
+}
+
+.family-page-header .username .reload-icon:hover {
+    transform: rotate(90deg);
+}
+
+
 .family-page-container .family-page-content {
     font-family: "Motiva Sans", Sans-serif;
     font-weight: 300;
@@ -147,6 +159,7 @@
     color: #cd7f32;
     border-color: #cd7f32;
 }
+
 .btn-outline-bronze:hover {
     background-color: #cd7f32;
     color: white;
@@ -156,7 +169,8 @@
     color: #6e6e6e;
     border-color: #b5b5b5;
 }
+
 .btn-outline-platinum:hover {
-    background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+    background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
     color: #333;
 }
